2006-07-08  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/TclInputStream.java (getsObj,
        filterBytes, peekAhead):
        Add debug output to gets method. Avoid looking
        at the next buffer when EOF char has been found.
        Cleanup code by removing C porting comments.
        Double check that the copiedTotal return value
        from getsObj matches the length of the TclObject.
        * tests/jacl/ioEncodeDecode.test: Mark some
        tests as knownbug since the tests don't pass.
        Add some tests that comparing conversion of
        shiftjis with utf-8.
        * tests/tcl/encoding.test: Add knownbug constraint
        to test that does not pass.
        * tests/tcl/io.test: Fixup whispace.

2006-07-07  Mo DeJong  <mdejong@users.sourceforge.net>

        Reimplement IO and encoding commands using the
        new java.nio.charset package. The previous
        implementation made use of sun.* APIs which
        were not officially supported.

        * src/jacl/tcl/lang/Channel.java: Use braces
        in if statement.
        * src/jacl/tcl/lang/ChannelBuffer.java (toString):
        Add toString() method for debug printout.
        * src/jacl/tcl/lang/EncodingCmd.java:
        Reimplement encoding command using java.nio APIs.
        The default system encoding is now set by
        reading the "file.encoding" property. This
        logic will default to iso8859-1.
        The encoding names command now returns only
        those encodings that are supported at runtime.
        * src/jacl/tcl/lang/FconfigureCmd.java:
        Raise an error if -encoding argument to
        fconfigure is not supported at runtime.
        * src/jacl/tcl/lang/TclInputStream.java:
        * src/jacl/tcl/lang/TclOutputStream.java:
        Reimplement input/output decode/encode
        operations using java.nio.charset package.
        Some escape based encodings are still broken,
        but most IO tests now pass.